# coursework_3

./: README.md  main.py  pyproject.toml
tests/: test_loaders.py  test_operations.py  test_result.py
utils/: loaders.py  operations.py  result.py  utils.py
